Cloudformation/tg.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Test TG - TG

Parameters:
  ProjectName:
    Description: project name
    Type: String
  vpc1:
    Description: VPC 1
    Type: String
  vpc1PublicSubnetA:
    Description: VPC 1 public subnet A
    Type: String
  routeTablePublic1:
    Description: Route table public 1
    Type: String
  vpc2:
    Description: VPC 2
    Type: String
  vpc2PublicSubnetA:
    Description: VPC 2 public subnet A
    Type: String
  routeTablePublic2:
    Description: Route table public 2
    Type: String
  vpc3:
    Description: VPC 3
    Type: String
  vpc3PublicSubnetA:
    Description: VPC 3 public subnet A
    Type: String
  routeTablePublic3:
    Description: Route table public 3
    Type: String

Resources:
  TransitGateway:
    Type: AWS::EC2::TransitGateway
    Properties:
      AmazonSideAsn: 65505
      AutoAcceptSharedAttachments: disable
      DefaultRouteTableAssociation: enable
      DefaultRouteTablePropagation: enable
      Description: TransitGateway Test
      DnsSupport: enable
      Tags: 
        - Key: Name
          Value: !Sub ${ProjectName}-TG
      VpnEcmpSupport: enable

  TransitGatewayAtt1:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds: 
        - !Ref vpc1PublicSubnetA
      Tags: 
        - Key: Name
          Value: Attachement-VPC1
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref vpc1

  TransitGatewayAtt2:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds: 
        - !Ref vpc2PublicSubnetA
      Tags: 
        - Key: Name
          Value: Attachement-VPC2
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref vpc2

  TransitGatewayAtt3:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds: 
        - !Ref vpc3PublicSubnetA
      Tags: 
        - Key: Name
          Value: Attachement-VPC3
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref vpc3

  RouteTablePublic1Route1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref routeTablePublic1
      DestinationCidrBlock: 10.0.0.0/8
      TransitGatewayId: !Ref TransitGateway

  # RouteTablePublic1Route2:
  #   Type: AWS::EC2::Route
  #   Properties:
  #     RouteTableId: !Ref routeTablePublic1
  #     DestinationCidrBlock: 10.3.0.0/16
  #     TransitGatewayId: !Ref TransitGateway

  RouteTablePublic2Route1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref routeTablePublic2
      DestinationCidrBlock: 10.0.0.0/8
      TransitGatewayId: !Ref TransitGateway

  # RouteTablePublic2Route2:
  #   Type: AWS::EC2::Route
  #   Properties:
  #     RouteTableId: !Ref routeTablePublic2
  #     DestinationCidrBlock: 10.3.0.0/16
  #     TransitGatewayId: !Ref TransitGateway

  RouteTablePublic3Route1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref routeTablePublic3
      DestinationCidrBlock: 10.0.0.0/8
      TransitGatewayId: !Ref TransitGateway

  # RouteTablePublic3Route2:
  #   Type: AWS::EC2::Route
  #   Properties:
  #     RouteTableId: !Ref routeTablePublic3
  #     DestinationCidrBlock: 10.2.0.0/16
  #     TransitGatewayId: !Ref TransitGateway
